--- a/package.json
+++ b/package.json
@@ -45,5 +45,13 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MichalSzeniak/Construction-Company---Website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MichalSzeniak/Construction-Company---Website/issues"
+  },
+  "homepage": "https://github.com/MichalSzeniak/Construction-Company---Website#readme"
 }
