--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "websocket-extensions": "^0.1.4"
   },
   "dependencies": {
+    "gsap": "^3.5.1",
     "normalize.css": "^8.0.1"
   },
   "repository": {
